--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "digitaltravel",
   "version": "1.0.0",
   "description": "ProyectoIntegrador",
-  "main": "app.js",
+  "main": "./src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon"
