--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/nicocarlavan/grupo_13_digitaltravel#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {}
