--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/nicocarlavan/grupo_13_digitaltravel#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12"
