--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.3",
