--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
+    "mercadopago": "^1.5.9",
     "method-override": "^3.0.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "validator": "^13.6.0"
   },
   "devDependencies": {}
 }
