--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -28,11 +28,12 @@
     "express-validator": "^6.12.1",
     "mercadopago": "^1.5.9",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
     "sequelize": "^6.6.5",
-    "validator": "^13.6.0"
+    "validator": "^13.7.0"
   },
   "devDependencies": {}
 }
